--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,9 +9,17 @@ defaults:
     shell: 'bash -Eeuo pipefail -x {0}'
 
 jobs:
+
   deb822:
     name: deb822-json
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: ./tests/deb822.sh
+
+  dsc:
+    name: dsc
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: ./tests/dsc.sh
