Add tests for "jq/dpkg-version.jq" (and fix a bug)
These are shamelessly borrowed from https://metacpan.org/release/GUILLEM/Dpkg-1.20.9/source/t/Dpkg_Version.t#L169-211

This also fixes a couple minor edge case bugs found by doing so.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,12 +10,13 @@ defaults:
 
 jobs:
 
-  deb822:
-    name: deb822-json
+  jq:
+    name: jq
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: ./tests/deb822.sh
+      - run: ./tests/jq-dpkg-version.sh
 
   dsc:
     name: dsc
